<resources>
    <string name="app_name">Astra</string>
    <string name="warehouse_management">WAREHOUSE MANAGEMENT</string>
    <string name="user_id_name">User ID/Name</string>
    <string name="password">Password</string>
    <string name="user_login">USER LOGIN</string>
    <string name="phone">Phone</string>
    <string name="send_otp">SEND OTP</string>
    <string name="pick_list_history">PICK LIST HISTORY</string>
    <string name="all">All</string>
    <string name="_20_08_2021_20_08_2022">20/08/2021 - 20-08-2022</string>
    <string name="picker_nhistory">PICKER\nHISTORY</string>
    <string name="total_assigned">TOTAL ASSIGNED</string>
    <string name="_120">120</string>
    <string name="onepointfivebyzeropointnine">1.5</string>


    <string name="price_format">%,.2f</string>
    <string name="completed">SCANNED /COMPLETED</string>
    <string name="_20">20</string>
    <string name="purchase_requisition">Purchase Requisition</string>
    <string name="allocation_date_time">Allocation Date Time</string>
    <string name="area_name">Area Name</string>
    <string name="route">Route</string>
    <string name="product_name">Product Name</string>
    <string name="rack_shelf">Rack Shelf</string>
    <string name="status">Status</string>
    <string name="request_history">REQUEST HISTORY</string>
    <string name="supervisior_name">Supervisior Name</string>
    <string name="allocation_date">Allocation Date</string>
    <string name="picker_nrequests">PICKER\nREQUESTS</string>
    <string name="total_requests">TOTAL REQUESTS</string>
    <string name="approved">APPROVED</string>
    <string name="pending">PENDING</string>
    <string name="supervisor">Supervisor</string>
    <string name="request">Request</string>
    <string name="label_scan_barcode">Scan Barcode</string>
    <string name="label_pick_list">Pick List</string>
    <string name="label_pick_list_nhistory">Pick List\nHistory</string>
    <string name="label_request_nhistory">Request\nHistory</string>
    <string name="label_dashboard">Dashboard</string>
    <string name="label_picker_nrequest">Picker\nRequest</string>
    <string name="label_assigned">assigned</string>
    <string name="label_in_pregress">in progress</string>
    <string name="label_purchase_requisition">Purchase Requisition</string>
    <string name="label_items_list">ITEMS LIST</string>
    <string name="label_barcode">barcode</string>
    <string name="label_item_number">item number</string>
    <string name="label_max_retail_price">max. retail price</string>
    <string name="label_select">Select</string>
    <string name="label_barcode_scanner">BARCODE SCANNER</string>
    <string name="label_login">Login</string>
    <string name="label_submit">submit</string>
    <string name="label_enter_otp">Enter Otp</string>
    <string name="label_no_allocation_line_found">No allocation line found</string>
    <string name="label_request">Request</string>
    <string name="label_supervisor">Supervisor</string>
    <string name="label_picking_list">PICKING LIST</string>
    <string name="label_no_of_boxes">No. of Boxes</string>
    <string name="label_update">Update</string>
    <string name="label_mode_of_delivery">Mode of Delivery</string>
    <string name="label_weight">Weight</string>
    <string name="label_transporter_code">Transporter Code</string>
    <string name="label_supervisor_request">Supervisor request</string>
    <string name="label_requestwithcolon">Request :&#160;</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">Ok</string>
    <string name="label_do_you_want_to_reset_the_item">Do you want to reset the item?</string>
    <string name="label_check_status">Check Status</string>
    <string name="label_no_picker_requests_found">No picker requests found</string>
    <string name="label_enter_login_details">enter login details</string>
    <string name="label_user_id">User ID</string>
    <string name="label_login_otp">login otp</string>
    <string name="label_enter_4_digit_otp">Enter 4 digit otp</string>
    <string name="label_search">search</string>
    <string name="label_allocated_qty">Allocated Qty.</string>
    <string name="label_allocated_packs">Allocated Packs.</string>
    <string name="label_required_packs">Required Packs</string>
    <string name="label_refresh_request">Refresh Request</string>
    <string name="label_expiry_date">Expiry date</string>
    <string name="label_refresh">refresh</string>
    <string name="label_remarks">Remarks</string>
    <string name="label_scan">Scan</string>
    <string name="label_search_by_purchase_requisition">Search by Purchase Requisition</string>
    <string name="label_batch_code">Batch code</string>
    <string name="mediasize_iso_05">12333</string>
    <string name="custom_nbarcode_print">Custom\nBarcode Print</string>
    <string name="label_logistics">Logistics</string>
    <string name="label_continue">Continue</string>
    <string name="label_100_mm_x_25_mm">100 mm X 25 mm</string>
    <string name="label_38mm_x_15_mm">38mm X 15 mm</string>
    <string name="label_choose_barcode_print_size">Choose barcode print size</string>
    <string name="label_item_name">Item name:</string>
    <string name="label_change_user">Change User</string>
    <string name="label_reallocate_user">Reallocate Order</string>
    <string name="label_dc_code">DC Code</string>
    <string name="label_site_id">Site ID</string>
    <string name="label_site_name">Site Name</string>
    <string name="label_area_id">Area ID</string>
    <string name="label_ax_user_id">AX User ID</string>
    <string name="label_user_name">User Name</string>
    <string name="label_re_allocation">Re Allocation</string>
    <string name="label_select_suggested_user">Select suggested User</string>
    <string name="label_select_user">Select User</string>
    <string name="label_reallocate_order">Reallocate Order</string>
</resources>