<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen10dp"
        android:background="@drawable/dialog_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:paddingStart="@dimen/dimen5dp"
            android:layout_marginEnd="@dimen/dimen5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/label_user_id"
                android:textColor="@color/bluetooth_header_bg" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/label_user_name"
                android:textColor="@color/bluetooth_header_bg" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/label_ax_user_id"
                android:textColor="@color/bluetooth_header_bg" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/suggested_users_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <data>

        <variable
            name="suggestedUserDialog"
            type="android.app.Dialog" />

    </data>
</layout>