<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_corner_dialog"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dimen5dp">

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen15dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:paddingTop="@dimen/dimen5dp"
            android:paddingBottom="@dimen/dimen5dp"
            android:text="@string/label_choose_barcode_print_size"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen14sp" />

        <RadioGroup
            android:id="@+id/custom_barcode_size_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="@dimen/dimen5dp"
            android:paddingBottom="@dimen/dimen5dp">

            <RadioButton
                android:id="@+id/thirtyeight_fifteen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/label_38mm_x_15_mm"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen14sp" />

            <RadioButton
                android:id="@+id/hundred_twentyfive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen5dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/label_100_mm_x_25_mm"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen14sp" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/continue_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button"
                android:fontFamily="@font/poppins_bold"
                android:paddingStart="@dimen/dimen10dp"
                android:paddingTop="@dimen/dimen5dp"
                android:paddingEnd="@dimen/dimen10dp"
                android:paddingBottom="@dimen/dimen5dp"
                android:text="@string/label_continue"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen14sp" />
        </RelativeLayout>
    </LinearLayout>
</layout>