<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#dcdfe9"
        tools:context=".ui.requesthistory.RequestHistoryActivity">

        <!-- Left side menu -->
        <LinearLayout
            android:id="@+id/left_side_menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#0d565b">

            <ImageView
                android:id="@+id/request_history_logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:src="@drawable/apollo_circle_logo" />
        </LinearLayout>

        <!-- Pick List History -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/left_side_menu"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/request_history"
                android:textStyle="bold"
                android:textColor="#000000" />

            <!-- Search layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <!-- search bar -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Purchase Requisition Number"
                            android:textColor="@color/black"
                            android:textSize="10sp" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/search_box_bg"
                            android:drawableRight="@drawable/search_icon"
                            android:hint="@string/all"
                            android:paddingVertical="7dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="5dp"
                            android:textColorHint="@color/black"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/supervisior_name"
                            android:textColor="@color/black"
                            android:textSize="10sp" />

                        <Spinner
                            android:id="@+id/area_name"
                            style="@style/SpinnerTheme"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:spinnerMode="dropdown" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/status"
                            android:textColor="@color/black"
                            android:textSize="10sp" />

                        <Spinner
                            android:id="@+id/route_number"
                            style="@style/SpinnerTheme"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:spinnerMode="dropdown" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/allocation_date"
                            android:textColor="@color/black"
                            android:textSize="10sp" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/search_box_bg"
                            android:hint="@string/_20_08_2021_20_08_2022"
                            android:paddingLeft="10dp"
                            android:textColorHint="@color/black"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:gravity="bottom"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:background="@drawable/rounded_corner_bg"
                            android:paddingHorizontal="5dp"
                            android:paddingVertical="6dp"
                            android:backgroundTint="#00aeef"
                            android:src="@drawable/search_icon"
                            app:tint="#FFFFFF" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <!-- Recyclerview -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/request_history_rcv"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="horizontal"
                    android:scrollbars="vertical" />
            </LinearLayout>
        </LinearLayout>

        <!-- Footer -->
        <LinearLayout
            android:id="@+id/footer_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/left_side_menu"
            android:background="#ffffff"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/picker_nrequests"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_requests"
                    android:textColor="#D1CBCB"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_120"
                    android:textColor="#C1BBBB"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/approved"
                    android:textColor="#D1CBCB"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:textColor="#C1BBBB"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pending"
                    android:textColor="#D1CBCB"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="20"
                    android:textColor="#C1BBBB"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>